Spacing fix.

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -25,3 +25,8 @@ td.empty{
 div.field_with_errors div.ui-effects-wrapper {
   display: inline-block !important;
 }
+
+tr.multi-content{
+  border-top: 3px solid #939393;
+  border-bottom: 3px solid #939393;
+}
